[gd_scene load_steps=11 format=3 uid="uid://cqhbgb3fotm3t"]

[ext_resource type="Script" uid="uid://deerj6yqbrn7g" path="res://Scripts/MenuScripts/unit_selection_panel.gd" id="1_t1xjq"]
[ext_resource type="StyleBox" uid="uid://bc0qkcohnagp" path="res://Resources/Overrides/Styles/label_style.tres" id="2_8ixtu"]
[ext_resource type="PackedScene" uid="uid://bk7gw2ed0ldxc" path="res://Scenes/Menus/unit_selection_slot.tscn" id="2_oi4v8"]
[ext_resource type="LabelSettings" uid="uid://cmeaa4ys48qvb" path="res://Resources/Overrides/Settings/label_settings.tres" id="3_5gikl"]
[ext_resource type="Script" uid="uid://dajw61vh5kchp" path="res://Scripts/UnitScripts/unit_data.gd" id="3_065gv"]
[ext_resource type="Resource" uid="uid://dulep71up18jy" path="res://Resources/Data/ClassData/PlayerClassData/knight_data.tres" id="4_5n7td"]
[ext_resource type="StyleBox" uid="uid://bhyxgbt3lvtl8" path="res://Resources/Overrides/Styles/button_style.tres" id="4_8xqg8"]
[ext_resource type="Resource" uid="uid://ckbg3nxtt1cky" path="res://Resources/Data/ClassData/PlayerClassData/priest_data.tres" id="5_b252s"]
[ext_resource type="Resource" uid="uid://bqfoaj6jgi4aa" path="res://Resources/Data/ClassData/PlayerClassData/assassin_data.tres" id="6_s361c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hrbqk"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.0823529, 0.109804, 0.133333, 0.627451)

[node name="UnitSelectionPanel" type="Control" node_paths=PackedStringArray("UnitSlotsContainer", "StartLevelButton", "InfoPanel", "NameLabel", "HPAttackLabel", "MoveRangeLabel", "AbilitiesLabel", "ActionsLabel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t1xjq")
UnitSlotScene = ExtResource("2_oi4v8")
AllClasses = Array[ExtResource("3_065gv")]([ExtResource("4_5n7td"), ExtResource("5_b252s"), ExtResource("6_s361c")])
UnitSlotsContainer = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitCustomizationContainer")
StartLevelButton = NodePath("MarginContainer/VBoxContainer/StartLevelButton")
InfoPanel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer")
NameLabel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer/NameLabel")
HPAttackLabel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer/HPAttackLabel")
MoveRangeLabel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer/MoveRangeLabel")
AbilitiesLabel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer/AbilitiesLabel")
ActionsLabel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer/ActionsLabel")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.144052, 0.186156, 0.219676, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MainContentContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnitCustomizationContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContentContainer"]
layout_mode = 2

[node name="UnitInfoPanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContentContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hrbqk")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = ExtResource("2_8ixtu")
label_settings = ExtResource("3_5gikl")

[node name="HPAttackLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = ExtResource("2_8ixtu")
label_settings = ExtResource("3_5gikl")

[node name="MoveRangeLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = ExtResource("2_8ixtu")
label_settings = ExtResource("3_5gikl")

[node name="AbilitiesLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = ExtResource("2_8ixtu")
label_settings = ExtResource("3_5gikl")
autowrap_mode = 2

[node name="ActionsLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 5
theme_override_styles/normal = ExtResource("2_8ixtu")
label_settings = ExtResource("3_5gikl")
autowrap_mode = 2

[node name="StartLevelButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/disabled = ExtResource("4_8xqg8")
theme_override_styles/normal = ExtResource("4_8xqg8")
text = "Start Level"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartLevelButton" to="." method="_on_start_level_button_pressed"]
